--- a/Cnote/app/src/main/res/layout/activity_getmenifestconf.xml
+++ b/Cnote/app/src/main/res/layout/activity_getmenifestconf.xml
@@ -6,12 +6,36 @@
     android:layout_height="match_parent"
     tools:context="srmicrosystems.cnote.GetManifestActivity"
     android:weightSum="1">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 <EditText
     android:layout_width="match_parent"
     android:layout_height="wrap_content" android:id="@+id/MenifestId" />
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/Manifestread_barcode"
+            android:background="@android:drawable/ic_menu_camera" android:layout_alignRight="@+id/MenifestId" />
+    </RelativeLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/barcode_header"
+        android:id="@+id/Mstatus_message"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:textColor="#848484" />
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content" android:id="@+id/btnSearchMenifest" android:text="Search" />
+
+
+
+    <Button android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:id="@+id/btnPrintAll" android:text = "Print All"  />
 
     <Button
         android:layout_width="match_parent"
