--- a/Cnote/app/src/main/res/layout/activity_manifest_items.xml
+++ b/Cnote/app/src/main/res/layout/activity_manifest_items.xml
@@ -4,31 +4,12 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="srmicrosystems.cnote.ManifestGenActivity"
-    android:orientation="vertical">
-<!--
-<TableLayout android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="srmicrosystems.cnote.ManifestGenActivity"
-    android:orientation="vertical">
--->
-
-   <!-- <TextView
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0"
-        android:layout_weight="1"
-        android:textColor="#fff428"
-        android:textSize="25sp"
-        android:textIsSelectable="true">
-    </TextView>
--->
+    android:orientation="horizontal">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="10dp"
@@ -38,87 +19,18 @@
         tools:context="srmicrosystems.cnote.ManifestGenActivity"
         android:background="#6d131011"
         android:visibility="visible"
-android:layout_marginBottom="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_margin="0dp"
         android:padding="0dp">
 
-      <!--  <TextView
-            android:id="@+id/CNNumber"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="CNNoteNumber"
-
-            android:layout_weight="1"
-            android:textColor="#fff428"
-            android:textSize="25sp"
-            android:textIsSelectable="true">
-        </TextView>
-
-        <TextView
-            android:id="@+id/BookingDate"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Second"
-            android:layout_weight="1"
-            android:textColor="#3b89f7"
-            android:textSize="25sp">
-        </TextView>
-
-        <TextView
-            android:id="@+id/ConsignerDetails"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Third"
-            android:layout_weight="2"
-            android:textColor="#4cf985"
-            android:textSize="25sp">
-
-        </TextView>
 
 
-        <TextView
-            android:id="@+id/SourceCityId"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Fourth"
-            android:layout_weight="1"
-            android:textColor="#36f9b8"
-            android:textSize="35sp">
-        </TextView>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="->"
-            android:layout_weight="1"
-            android:textColor="#e3eb14e4"
-            android:textSize="35sp"
-            android:id="@+id/arrow">
-        </TextView>
-        <TextView
-            android:id="@+id/DestCityID"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="fifth"
-            android:layout_weight="1"
-            android:textColor="#f50f0f"
-            android:textSize="35sp">
-        </TextView>
-        <TextView
-            android:id="@+id/ActualWight"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Fourth"
-            android:layout_weight="1"
-            android:textColor="#36f9b8"
-            android:textSize="35sp">
-        </TextView>-->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2016150412123"
             android:id="@+id/CNNumber"
-
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textIsSelectable="true"
             android:textColor="#3860ef" />
         <TextView
@@ -127,7 +39,7 @@ android:layout_marginBottom="10dp"
             android:text="FedEx Suart"
             android:id="@+id/ConsignerDetails"
             android:layout_below="@id/CNNumber"
-            android:textSize="25sp"
+            android:textSize="22sp"
             android:textIsSelectable="false"
             android:textColor="#6eec6a" />
 
@@ -138,7 +50,7 @@ android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
             android:text="BOM"
             android:id="@+id/destcc"
-            android:textSize="35sp"
+            android:textSize="32sp"
             android:layout_alignParentTop="true"
             android:layout_marginStart="10dp"
             android:textColor="#fff700"
@@ -150,7 +62,7 @@ android:layout_marginBottom="10dp"
             android:id="@+id/dsetcity"
 
             android:layout_marginStart="10dp"
-            android:textSize="10sp"
+            android:textSize="9sp"
             android:layout_below="@+id/destcc"
             android:layout_alignStart="@+id/destcc"
             android:textColor="#ffffff" />
@@ -159,7 +71,7 @@ android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
             android:text="-"
             android:id="@+id/dash"
-            android:textSize="40sp"
+            android:textSize="38sp"
             android:layout_alignParentTop="true"
             android:layout_marginStart="0dp"
             android:layout_toLeftOf="@id/destcc"
@@ -169,7 +81,7 @@ android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
             android:text="SRT"
             android:id="@+id/fromcc"
-            android:textSize="35sp"
+            android:textSize="32sp"
             android:layout_alignParentTop="true"
             android:layout_toLeftOf="@+id/dash"
             android:layout_marginStart="20dp"
@@ -182,7 +94,7 @@ android:layout_marginBottom="10dp"
             android:id="@+id/fromc"
 
             android:layout_marginStart="20dp"
-            android:textSize="10sp"
+            android:textSize="9sp"
             android:layout_below="@+id/fromcc"
             android:layout_alignStart="@+id/fromcc"
             android:textColor="#ffffff" />
@@ -192,7 +104,7 @@ android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
             android:text="80"
             android:id="@+id/uqty"
-            android:textSize="35sp"
+            android:textSize="32sp"
             android:layout_alignParentTop="true"
             android:layout_centerInParent="true"
             android:layout_marginStart="10dp"
@@ -203,7 +115,7 @@ android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
             android:text="/"
             android:id="@+id/slash"
-            android:textSize="35sp"
+            android:textSize="33sp"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/uqty"
             android:layout_marginStart="0dp"
@@ -214,7 +126,7 @@ android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
             android:text="100"
             android:id="@+id/tqty"
-            android:textSize="35sp"
+            android:textSize="33sp"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/slash"
             android:layout_marginStart="0dp"
@@ -237,27 +149,21 @@ android:layout_marginBottom="10dp"
             android:id="@+id/tocon"
             android:layout_below="@id/BookingDate"
             android:textDirection="rtl"
-            android:textSize="25sp"
+            android:textSize="22sp"
             android:textIsSelectable="false"
             android:layout_alignEnd="@+id/BookingDate"
             android:layout_toEndOf="@+id/tqty"
             android:textColor="#fb7522" />
-     <!-- <Button
-          android:layout_width="65dp"
-          android:layout_height="wrap_content"
-          android:id="@+id/UploadBTN"
-          android:text="Upload"
 
-          android:layout_toStartOf="@+id/UploadFULLBTN"
-          />-->
-      <EditText
+      <srmicrosystems.cnote.MyNumberPicker
+
+          android:id="@+id/updateqty"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:text="1"
-          android:id="@+id/updateqty"
-          android:textSize="40sp"
-        android:layout_toLeftOf="@+id/UploadBTN"
-          android:textColor="#c0ff04" />
+          android:textSize="65sp"
+          android:layout_toLeftOf="@+id/UploadBTN"
+          android:textColor="#c0ff04">
+      </srmicrosystems.cnote.MyNumberPicker>
       <ImageButton
           android:layout_width="65dp"
           android:layout_height="65dp"
@@ -267,7 +173,9 @@ android:layout_marginBottom="10dp"
           android:text="Upload"
           android:padding="10dp"
           android:layout_toStartOf="@+id/UploadFULLBTN"
-          android:background="@android:color/transparent" />
+          android:background="@android:color/transparent"
+          android:layout_alignBottom="@+id/UploadFULLBTN"
+          android:layout_below="@+id/dsetcity" />
 
 <ImageButton
     android:layout_width="65dp"
@@ -275,9 +183,29 @@ android:layout_marginBottom="10dp"
     android:src="@drawable/box_icon"
     android:id="@+id/UploadFULLBTN"
     android:text="FUll Load"
-    android:layout_alignParentEnd="true"
     android:scaleType="fitCenter"
-    android:background="@android:color/transparent" />
+    android:background="@android:color/transparent"
+    android:layout_below="@+id/dsetcity"
+    android:layout_alignParentEnd="true" />
+
+        <Spinner
+            android:layout_width="140dp"
+            android:layout_height="54dp" android:id="@+id/mixval"
+            android:layout_below="@+id/UploadBTN"
+            android:layout_toRightOf="@+id/updateqty"  ></Spinner>
+
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/mixedbag"
+            android:id="@+id/MixedBTN"
+            android:text="Mixed Bag"
+            android:scaleType="fitCenter"
+            android:background="@android:color/transparent"
+            android:layout_below="@+id/UploadFULLBTN"
+            android:layout_alignEnd="@+id/ConsignerDetails"
+            android:layout_toStartOf="@+id/mixval" />
+
 
     </RelativeLayout>
 
