--- a/Cnote/app/src/main/res/layout/activity_main.xml
+++ b/Cnote/app/src/main/res/layout/activity_main.xml
@@ -120,8 +120,8 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sync1"
-
+            android:text="CNnote Payment"
+            android:id="@+id/btnPayment"
             android:textColor="#f7e410"
             android:background="#93173f57"
             android:textSize="25sp"
@@ -131,8 +131,8 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sync2"
-            android:id="@+id/btnSync"
+            android:text="Krishna"
+            android:id="@+id/btnKrishna"
             android:textColor="#f7e410"
             android:background="#93173f57"
             android:textSize="25sp"
